add Chicken the dog information with img in folder
Co-authored-by: Jonathan Delcid <jdelcid23@gmail.com>

--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
       For all inquiries, please fill out our adoption application:
       https://www.woofproject.org/application</p>
   </div>
+  <div>
+    <img src="img/chicken.jpg" alt="A picture of Chicken the dog.">
+    <h3>Chicken</h3>
+    <ul>
+      <li>Age: 6 Years</li>
+      <li>Gender: Male</li>
+      <li>Energy Level: High</li>
+      <li>Location: Vacouver, WA</li>
+    </ul>
+    <p>Being a black dog in Texas has not worked out very well in Chicken's favor. Chicken has been in rescue for his entire 2 years of life and would love to fin a home that he can finally call his own. Chicken walks ok on leash and is friendly with people, although he may be initially timid at first, he warms up quick. Chicken would make an excellent hiking buddy!</p>
+  </div>
+  
 
 
 
