--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="img/beau.jpg" alt="A picture of Beau.">
     <h3>Beau</h3>
     <ul>
-      <li>Age: 8 years</li>
+      <li>Age: 8 Years</li>
       <li>Gender: Male</li>
       <li>Energy Level: Low</li>
       <li>Location: Vancouver, WA</li>
@@ -51,7 +51,7 @@
     <img src="img/brutus.jpg" alt="A picture of Brutus">
     <h3>Brutus</h3>
     <ul>
-      <li>Age: 5 years</li>
+      <li>Age: 5 Years</li>
       <li>Gender: Male</li>
       <li>Energy Level: Low</li>
       <li>Location: Portland. OR</li>
@@ -71,7 +71,17 @@
       Brutus can be stubborn at times which we are told is common of the breed. He would do best in a home with someone who has breed experience. Please share on the application what if any experience you have with this breed.</p>
   </div>
 
-
+  <div>
+    <img src="img/nola.jpg" alt="A picture of Nola">
+    <h3>Nola</h3>
+    <ul>
+      <li>Age: 2 Years</li>
+      <li>Gender: Female</li>
+      <li>Energy Level: Medium</li>
+      <li>Location: Battle Ground, WA</li>
+    </ul>
+    <p>Nola is 2 years old a 100 lbs! She knows how to sit and stay and has pretty good manners. She is potty trained, fixed. We have chickens and she has been trained not to chase them. She has made friends with our cats but she does follow them around the house sometimes, which looks suspicious but has never hurt them.Nola is a wonderful loving pet. Great with kids. Loves people. She has lived with other dogs but has Started some fights in the home. They love her, but feel she needs to be an only dog.Nola's adoption donation is $100. Please go to sccpets.com and fill out the adoption application</p>
+  </div>
 
 
 
