add ceaser information to index.html and img files
Co-authored-by: Jonathan Delcid jdelcid23@gmail.com

--- a/index.html
+++ b/index.html
@@ -83,6 +83,25 @@
     <p>Nola is 2 years old a 100 lbs! She knows how to sit and stay and has pretty good manners. She is potty trained, fixed. We have chickens and she has been trained not to chase them. She has made friends with our cats but she does follow them around the house sometimes, which looks suspicious but has never hurt them.Nola is a wonderful loving pet. Great with kids. Loves people. She has lived with other dogs but has Started some fights in the home. They love her, but feel she needs to be an only dog.Nola's adoption donation is $100. Please go to sccpets.com and fill out the adoption application</p>
   </div>
 
+  <div>
+    <img src="img/ceaser.jpg" alt="A picture of Ceaser">
+    <h3>Ceaser</h3>
+    <ul>
+      <li>Age: 10 Years</li>
+      <li>Gender: Male</li>
+      <li>Energy Level: Low</li>
+      <li>Location: Vancouver, WA</li>
+    </ul>
+    <p>I'm excited to meet my new family! I'm looking for the same things most dogs are: going out for walks, maybe some playtime in the yard, snuggles with my family, and (of course) lots of toys and treats! If you're ready for that, let's meet!
+      Here's what I need in my new home:
+      I need to meet any other dogs I might be living with.
+      I would like to meet any kids I might be living with.
+      I need a home without cats
+      I need a yard with a 6 ft wood fence.
+      I need to be adopted with my best friend Charlie! A member of the adoption team can tell you more.</p>
+
+  </div>
+
 
 
 
