--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>NW Animal Shelter</h1> 
   <h2>Here is a list of amazing animals that are now up for adoption!</h2>
-
+  <hr>
   <div class="adoption">
     <div class="dog">
       <img src="img/beau.jpg" alt="A picture of Beau.">
@@ -64,7 +64,7 @@
         <li>Energy Level: Medium</li>
         <li>Location: Battle Ground, WA</li>
       </ul>
-      <p>Nola is 2 years old a 100 lbs! She knows how to sit and stay and has pretty good manners. She is potty trained, fixed. We have chickens and she has been trained not to chase them. She has made friends with our cats but she does follow them around the house sometimes, which looks suspicious but has never hurt them.Nola is a wonderful loving pet. Great with kids. Loves people. She has lived with other dogs but has Started some fights in the home. They love her, but feel she needs to be an only dog.Nola's adoption donation is $100. Please go to sccpets.com and fill out the adoption application</p>
+      <p>Nola is 2 years old a 100 lbs! She knows how to sit and stay and has pretty good manners. She is potty trained, fixed. We have chickens and she has been trained not to chase them. She has made friends with our cats but she does follow them around the house sometimes, which looks suspicious but has never hurt them.Nola is a wonderful loving pet. Great with kids. Loves people. She has lived with other dogs but has Started some fights in the home. They love her, but feel she needs to be an only dog.Nola's adoption donation is $100.</p>
     </div>
 
     <div class="dog">
